    lines of Markdown

  * Attempted fix for rendering of the catsoop logo in the footer on
    iOS/Safari

  * Fixed a potential race condition in cslog.most_recent

SECURITY:

  * Logs are now encrypted by default

  * Removed information about the Python version from the default footer

  * Prevented lock file locations from leaking information when logs are
    encrypted

DOCUMENTATION:

VENDORED SOFTWARE:

  * Upgraded KaTeX to version 0.13.13

  * Upgraded Twemoji to v13.1.0

  * Upgraded CodeMirror to v5.62.2


####################
# Version 2021.2.0 #
####################

ADDED:

  * Added information about the Python version to the default footer

  * Added ability to easily change the Javascript callback functions invoked
    after taking an action using the built-in action buttons

  * Javascript callback functions now take a second parameter, the name(s) of
    the question(s) that were affected by the action

FIXED:

  * Fixed the color of the "callout" box for the checking queue

  * Fixed broken tutor.read_checker_result

  * Updated the "cert" auth type to work with NGINX

SECURITY:

  * Fixed an XSS vulnerability in the default handler


####################
# Version 2020.9.0 #
####################

ADDED:

  * Added ability to conditionally show or hide HTML elements via the
    'cs-show-if' and 'cs-hide-if' attributes

  * Added support for showing line numbers next to code snippets by adding
    '-lines' to the end of the language specified for a code block

  * Added ability to avoid running children's preloads into cs_children, by
    setting 'cs_load_children = False'

  * Added support for using LTI with Canvas, and added support for customizing
    the username inferred from LTI data, via "lti_username_function" in
    cs_lti_config

  * Added support for PostgreSQL as an alternative backend for storing logs

  * Added the ability to customize the text shown on the button in <showhide>
    tags, via the summary attribute
